chromeos: delete WindowTreeFactory before asserting no WindowTrees

WindowTreeFactory owns any WindowTrees that were created by way of
ui::mojom::WindowTreeFactory. So, WindowTreeFactory needs to be deleted before
the DCHECK that there are no more WindowTrees.

BUG=854336
TEST=covered by test

Change-Id: Idba2928244721579e694b434415b95cbbdf4b360
Reviewed-on: https://chromium-review.googlesource.com/1107136
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568859}
Former-commit-id: f9975bfffa230d77cf81a3062ea3f3c0a6dc0d05